# plzbot-tars

./: .env  .env.bak.1767758541  .env.bak.20260226_025153  .env.example  .env.v1  .env.v2  .gitignore  Cargo.toml  README.md  analyze.py  analyze_wallets.py  calls.json  clean.sh  dashboard.html  slime  tree.txt  usage.json  whales.json
_archive/: solana_meme_repo_20260113_115948.tgz
_archive/src_baks/: app.rs.bak.1768083936  cache.rs.bak.1768090049  cache.rs.bak.1768091861  dexscreener.rs.bak.1768092901  discovery.rs.bak.1767895435  discovery.rs.bak_noliq.1767870735  engine.rs.bak.1767872492  engine.rs.bak_noliq.1767870735  fmt.rs.bak.1767873144  ingest.rs.bak.1768082171  ingest.rs.bak.1768091128  main.rs.bak.1768088289  main.rs.bak_before_helius_ingest  main.rs.bak_fixdelims.1767897698  mod.rs.bak.1768091799  per_coin.rs.bak.1768085525  per_coin.rs.bak.1768089008  per_coin.rs.bak.1768090556
artifacts/: usage.json
backup_1767808822/: main.rs
data/: solana_meme.sqlite-shm.bak_20260119_220859
learn/: Cargo.toml
migrations/: 001_init.sql
reports/: wallets_avoid.csv  wallets_avoid_db.csv  wallets_ranked_db.csv  wallets_top_neg_db.csv  wallets_watch.csv  wallets_watch_db.csv
scripts/: db.sh  db_check.sh  db_indexes.sh  db_migrate_wallets.sql  db_probe.sh  db_watch.sh  doctor_signers.sh  env_db.sh  fix_build_disable_helius_client.sh  fix_build_errors.sh  fix_client_and_config.sh  fix_config_add_helius_rpc_url.sh  fix_config_rpc.sh  fix_config_rpc_url.sh  fix_config_rpc_url_force.sh  fix_config_rpc_url_placement.sh  fix_config_rs_clean.sh  fix_config_struct_and_init.sh  fix_helius_client_build.sh  fix_per_coin_borrow.sh  fix_wallet_event_call.sh  force_canonical_db.sh  inspect_runner.sh  modularize_engine.sh  print_tree.sh  print_tree_and_dbs.sh  reset_db.sh  reset_db_clean.sh  run.sh  show_client_region.sh  sql.sh  tree.sh  tree_me.sh  watch_ladders.sh
src/: app.rs  banner.rs  call_log.rs  config.rs  config.rs.bak  enrichment.rs  fmt.rs  gambol_log.rs  governor.rs  helius.rs  io.rs  main.rs  main.rs.bak  market.rs  missed_calls.rs  oldbrain.rs  onchain.rs  printing.rs  reputation.rs  resolver.rs  rug_tracker.rs  rugcheck.rs  scoring.rs  tars.rs  telegram.rs  time.rs  types.rs
src/app/: discover_seed.rs
src/db/: mod.rs  mod.rs.bak.1769031943  schema.sql
src/helius/: client.rs  client.rs.bak.1767842188  client.rs.bak.1769076598  client.rs.bak.fix.1769076756  ingest.rs  ingest.rs.bak.1769076598  ingest.rs.bak.fix.1769076756  mod.rs  parse.rs  per_coin.rs  per_coin.rs.bak.1769076598  per_coin.rs.bak.fix.1769076756  types.rs  utils.rs  websocket.rs
src/market/: cache.rs  cache.rs.bak.1767843387  cache.rs.bak.1767843564  dexscreener.rs  dexscreener.rs.bak.1767843387  discovery.rs  mod.rs  types.rs
src/pumpportal/: client.rs  types.rs
src/scoring/: call_outcomes.rs  engine.rs  (+11 more)
tools/: analyze_wallets_db.py
ui/: index.html  server.js
(+27 files in other folders)
