[package]
name = "solana_meme"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dotenvy = "0.15"
urlencoding = "2"
env_logger = "0.11"