[package]
name = "solana_meme"
version = "0.1.0"
edition = "2021"
description = "Solana meme coin sniper with wallet reputation learning"
authors = ["murdersnake <you@example.com>"]
license = "MIT"
repository = "https://github.com/iheartdio69/scaling-octo-fortnight"
keywords = ["solana", "meme", "sniper", "trading", "bot"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
default-run = "solana_meme"

[[bin]]
name = "brain"
path = "src/bin/brain.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[dependencies]
axum = "0.7"
anyhow = "1"
base64 = "0.21"
bincode = "1"
bs58 = "0.5.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5.54", features = ["derive"] }
colored = "2.0"
dotenvy = "0.15"
futures-util = "0.3.31"
lazy_static = "1.4"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "3.0.0"
tokio = { version = "1.0", features = ["full", "signal"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
urlencoding = "2.1.3"

[dev-dependencies]